Fix spinner bug Prior to this fix, an "invisible" class was used to hide all the main site content until the data was loaded. However, the elements still took up space on the page and the spinner displayed incorrectly. To fix this, ng-hide and ng-if are used to hide / add elements to the page. ng-if adds the elements to the DOM once the condition is true.

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,11 +2,6 @@
   padding-bottom: 40px;
 }
 
-.invisible {
-  visibility: hidden;
-  opacity: 1;
-}
-
 /*** Table styles ***/
 
 .table-dashboard>thead>tr>th.selected {
